--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,15 @@
     <title>Webpack</title>
 </head>
 <body>
-    <img src="assets/sleeping.png" alt="mario sleeping">
+    <nav>
+        <h1 class="logo"><a href="/">Webpack Project</a></h1>
+    </nav>
+
+    <section class="output-section">
+        <p>The following element's text was inserted by JavaScript using the <strong>"bro"</strong> function,  <strong>very unnecessary? Yupp!</strong></p>
+        <p id="output"></p>
+    </section>
+
+    <img class="sleeping" src="assets/sleeping.png" alt="mario sleeping">
 </body>
 </html>
